syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "itemP.proto";

option csharp_namespace = "Application";
option java_multiple_files = true;
option java_package = "sep3.server";
option java_outer_classname = "WishListProto";

message WishListP {
  int32 id = 1;
  int32 customerId=2;
  repeated ItemP items=3;
}
message WishListRequest{
  int32 itemId=1;
  string username=2;
}
message SuccessResponse{
  string message=1;
}
message GetWishListRequest{
  string username=1;
}
message GetWishListResponse{
  repeated ItemP items=1;
}

service WishListService{
  rpc addToWishList(WishListRequest) returns (SuccessResponse){};
  rpc getWishList(GetWishListRequest) returns (GetWishListResponse){};
}